<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#eaecee"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp">
        <TextView
            android:text="@string/id"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="13sp"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/type"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:textSize="13sp"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/line"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="13sp"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/station"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textSize="13sp"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/open"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>

        <TextView
            android:text="@string/closed"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lvHistoryIncident"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</LinearLayout>